Bug 32050 - telepathy-gabble-0.10.3: __strcmp_ia32: Process /usr/libexec/telepathy-gabble was killed by signal 11 (SIGSEGV)
Summary: telepathy-gabble-0.10.3: __strcmp_ia32: Process /usr/libexec/telepathy-gabble...
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: gabble (show other bugs)
Version: 0.10
Hardware: Other All
: medium normal
Assignee: Telepathy bugs list
QA Contact: Telepathy bugs list
URL:
Whiteboard:
Keywords: patch
Depends on:
Blocks:
 
Reported: 2010-12-02 07:22 UTC by Brian Pepple
Modified: 2011-11-10 09:10 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Backtrace (9.68 KB, text/plain)
2010-12-02 07:22 UTC, Brian Pepple
Details
conn-olpc: handle activities with NULL ids. (1.03 KB, patch)
2011-11-10 08:44 UTC, Will Thompson
Details | Splinter Review

Description Brian Pepple 2010-12-02 07:22:39 UTC
Created attachment 40742 [details]
Backtrace

abrt version: 1.1.13
architecture: i686
Attached file: backtrace
cmdline: /usr/libexec/telepathy-gabble
component: telepathy-gabble
crash_function: __strcmp_ia32
executable: /usr/libexec/telepathy-gabble
kernel: 2.6.35.6-45.fc14.i686
package: telepathy-gabble-0.10.3-1.fc14
rating: 4
reason: Process /usr/libexec/telepathy-gabble was killed by signal 11 (SIGSEGV)
release: Fedora release 14 (Laughlin)
time: 1288257854
uid: 500

How to reproduce
-----
1.sugar-emulator from gnome (livinst of f14-RC1-live-soas to HD then yum
groupinstall gnome-desktop)
2.<f1> neighborhood view
3.central avitar disappears after 5-6 minutes
Comment 1 Will Thompson 2011-11-10 08:44:47 UTC
Created attachment 53373 [details] [review]
conn-olpc: handle activities with NULL ids.

Other places in the code seem to handle GabbleOlpcActivity.id being
NULL; and <https://bugs.freedesktop.org/show_bug.cgi?id=32050> is a
crash on this strcmp. There are no logs, and the first argument to
strcmp is not on record, so this suggests to me that this might be the
cause!
Comment 2 Guillaume Desmottes 2011-11-10 09:04:29 UTC
Comment on attachment 53373 [details] [review]
conn-olpc: handle activities with NULL ids.

Review of attachment 53373 [details] [review]:
-----------------------------------------------------------------

++
Comment 3 Will Thompson 2011-11-10 09:10:22 UTC
Pushed to 0.14 and master, thanks!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.